dev/test_programs/INVALID/group1/stmt10.go
package main;

func main(){
	var x, y int, float64;
}
